--- a/index.html
+++ b/index.html
@@ -1,5 +1,15 @@
+<!DOCTYPE html>
 <html>
-    <body style="background-color:black; color:white;">
-        <h1>Wow, so empty ...</h1>
-    </body> 
+
+<head>
+    <link rel="stylesheet" href="styles.css">
+    <style>
+        @import url('https://fonts.googleapis.com/css2?family=Nunito:ital,wght@0,200..1000;1,200..1000&display=swap');
+    </style>
+</head>
+
+<body style="background-color:black; color:white;">
+    <h1 class="nutino-title">Wow, so empty ...</h1>
+</body>
+
 </html>
